--- a/scientific_tools_consolidated/Dynamics/6.3_Machine_Learning_Potentials/N2P2.md
+++ b/scientific_tools_consolidated/Dynamics/6.3_Machine_Learning_Potentials/N2P2.md
@@ -30,6 +30,24 @@ N2P2 (Neural Network Potential Package) is a software package for training and u
 
 **Sources**: N2P2 documentation, GitHub repository
 
+## Key Strengths
+
+### Methodology:
+- Behler-Parrinello symmetry functions
+- Well-established approach
+- Atomic energy decomposition
+- Interpretable descriptors
+
+### LAMMPS Integration:
+- Official pair_style nnp
+- Production-ready
+- Efficient inference
+
+### Training:
+- Multiple optimizers
+- Parallel training
+- Good documentation
+
 ## Inputs & Outputs
 - **Input formats**: input.nn (parameters), scaling.data, weights files, input.data (training structures)
 - **Output data types**: energy, forces, training metrics, prediction logs
@@ -52,12 +70,30 @@ N2P2 (Neural Network Potential Package) is a software package for training and u
 - Linear scaling with system size
 - Parallelized for efficiency
 
+## Best Practices
+- Use diverse training configurations
+- Validate symmetry function parameters
+- Check force errors carefully
+- Use appropriate cutoff radii
+
+## Limitations & Known Constraints
+- Symmetry function choice critical
+- Less accurate than equivariant methods
+- Training data quality essential
+- Manual descriptor selection
+
 ## Application Areas
 - Materials discovery
 - Phase transitions
 - Nanostructures and interfaces
 - Catalysis (surface reactions)
 - Water and aqueous systems
+
+## Comparison with Other Codes
+- **vs DeepMD-kit**: N2P2 Behler-Parrinello, DeepMD deep learning
+- **vs AMP**: N2P2 more features, AMP simpler
+- **vs NequIP/MACE**: N2P2 descriptor-based, others equivariant
+- **Unique strength**: Well-established methodology, LAMMPS integration, interpretable
 
 ## Community and Support
 - Open-source (GPL v3)
@@ -70,6 +106,11 @@ N2P2 (Neural Network Potential Package) is a software package for training and u
 1. Homepage: https://compphysvienna.github.io/n2p2/
 2. GitHub: https://github.com/CompPhysVienna/n2p2
 3. Method reference: J. Behler and M. Parrinello, Phys. Rev. Lett. 98, 146401 (2007)
+
+**Secondary sources**:
+1. N2P2 tutorials
+2. Behler-Parrinello methodology papers
+3. Published applications
 
 **Confidence**: VERIFIED
 
